src/objects/Training_Contact_Role_Detail__e.object
<CustomObject>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Training Contact Role Detail PE</label>
    <pluralLabel>Training Contact Role Details PE</pluralLabel>
</CustomObject>